..F....... [ZBXNEXT-8908] fixed pie chart and graph widget value alignment in legend

--- a/sass/stylesheets/sass/components/_svg-graph.scss
+++ b/sass/stylesheets/sass/components/_svg-graph.scss
@@ -30,6 +30,7 @@
 	line-height: $svg-legend-line-height;
 
 	.svg-graph-legend-header {
+		justify-self: end;
 		color: $font-alt-color;
 
 		&:first-of-type {
@@ -57,6 +58,7 @@
 
 	.svg-graph-legend-no-data {
 		grid-column: 2 / -1;
+		justify-self: end;
 		color: $font-alt-color;
 	}
 
@@ -66,6 +68,10 @@
 
 		.svg-graph-legend-item {
 			grid-column: 1;
+		}
+
+		.svg-graph-legend-value {
+			justify-self: end;
 		}
 	}
 }
